--- a/TravelMate code/index.html
+++ b/TravelMate code/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TravelMate</title>
-    <link rel="stylesheet" href="/TravelMate/style.css"> <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
     <nav>
         <div class="logo">TravelMate</div> <!-- Logo -->
         <div class="social-icons">
-            <a href="https://www.facebook.com/share/CyQz539hXZ3oCxEi/?mibextid=LQQJ4d" target="_blank"><img src="/TravelMate/pictures/facebook1.jpg" alt="Facebook"></a> <!-- Facebook icon link -->
-            <a href="https://www.instagram.com/_saidakhmad__?igsh=eG5qbTQzaGIxcDU0&utm_source=qr" target="_blank"><img src="/TravelMate/pictures/insta.jpg" alt="Instagram"></a> <!-- Instagram icon link -->
-            <a href="https://www.linkedin.com/in/saidahmad-nuriddinov-ba892b211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="/TravelMate/pictures/linkedIn.png" alt="LinkedIn"></a> <!-- LinkedIn icon link -->
+            <a href="https://www.facebook.com/share/CyQz539hXZ3oCxEi/?mibextid=LQQJ4d" target="_blank"><img src="../pictures/facebook1.jpg" alt="Facebook"></a> <!-- Facebook icon link -->
+            <a href="https://www.instagram.com/_saidakhmad__?igsh=eG5qbTQzaGIxcDU0&utm_source=qr" target="_blank"><img src="../pictures/insta.jpg" alt="Instagram"></a> <!-- Instagram icon link -->
+            <a href="https://www.linkedin.com/in/saidahmad-nuriddinov-ba892b211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="../pictures/linkedIn.png" alt="LinkedIn"></a> <!-- LinkedIn icon link -->
         </div>
     </nav>
     <div class="section" id="section1">
@@ -28,7 +28,7 @@
             <div class="stories">
                 <div class="story">
                     <a href="#cebu-anchor">
-                        <img src="/TravelMate/pictures/cebu1.jpg" alt="Cebu">
+                        <img src="../pictures/cebu1.jpg" alt="Cebu">
                         <div class="text-overlay">
                             <h3>Discover More About Cebu</h3>
                         </div>
@@ -37,7 +37,7 @@
                 
                 <div class="story">
                     <a href="#hanoi-anchor">
-                        <img src="/TravelMate/pictures/hanoi.jpg" alt="Hanoi">
+                        <img src="../pictures/hanoi.jpg" alt="Hanoi">
                         <div class="text-overlay">
                             <h3>Discover More About Hanoi</h3>
                         </div>
@@ -46,7 +46,7 @@
                 
                 <div class="story">
                     <a href="#sapa-anchor">
-                        <img src="/TravelMate/pictures/sapa4.jpg" alt="SaPa">
+                        <img src="../pictures/sapa4.jpg" alt="SaPa">
                         <div class="text-overlay">
                             <h3>Explore Mountains of Sa Pa</h3>
                         </div>
@@ -94,9 +94,9 @@
         <div class="content">
             <h2>Discover More</h2>
             <div class="gallery">
-                <a class="google" href="https://info.myboracayguide.com/boracay-sunset/" target="_blank"><img src="/TravelMate/pictures/boracay2.jpg" alt="boracay-sunset"></a> <!-- Image for Gallery 1 -->
-                <a class="google" href="https://www.discoverthephilippines.com/boracays-white-beach/" target="_blank"><img src="/TravelMate/pictures/boracay1.jpg" alt="boracays-white-beach"></a> <!-- Image for Gallery 2 -->
-                <a class="google" href="https://north-vietnam.com/train-cable-car-sapa-to-fansipan/" target="_blank"><img src="/TravelMate/pictures/sapa1.jpg" alt="train-cable-car-sapa-to-fansipan"></a> <!-- Image for Gallery 3 -->
+                <a class="google" href="https://info.myboracayguide.com/boracay-sunset/" target="_blank"><img src="../pictures/boracay2.jpg" alt="boracay-sunset"></a> <!-- Image for Gallery 1 -->
+                <a class="google" href="https://www.discoverthephilippines.com/boracays-white-beach/" target="_blank"><img src="../pictures/boracay1.jpg" alt="boracays-white-beach"></a> <!-- Image for Gallery 2 -->
+                <a class="google" href="https://north-vietnam.com/train-cable-car-sapa-to-fansipan/" target="_blank"><img src="../pictures/sapa1.jpg" alt="train-cable-car-sapa-to-fansipan"></a> <!-- Image for Gallery 3 -->
             </div>
         </div>
     </div>
